# signals-notebooks

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  quickstart.ipynb  snowplow_signals_mcp.py
ecommerce/: ecom_batch_attributes.ipynb  ecom_batch_feature_view.ipynb  ecom_batch_view.ipynb  ecom_ootb_batch_attributes.ipynb  ecom_ootb_batch_feature_view.ipynb  ecom_ootb_batch_view.ipynb  ecom_stream_feature_view.ipynb  ecom_stream_view.ipynb
web/: intervention_test.ipynb  page_views_in_session.ipynb  web_prospect_scoring_end_to_end.ipynb  web_stream_feature_view.ipynb  web_stream_link_clicks_feature_view.ipynb  web_stream_link_clicks_view.ipynb  web_stream_link_clicks_view_local.ipynb  web_stream_page_views_feature_view.ipynb  web_stream_page_views_view.ipynb  web_stream_page_views_with_tracking.ipynb
